radv: nir validation error with invalid array access
zink seems to be producing unexpected spirv with some piglit tests like MESA_LOADER_DRIVER_OVERRIDE=zink bin/shader_runner tests/spec/arb_tessellation_shader/execution/tcs-tes-levels-out-of-bounds-read.shader_test -auto -fbo
This is obviously out-of-bounds, as the test name implies, but it seems this is legal spirv, so radv should probably be optimizing it out or doing something so that nir validation continues to pass.